# CGoGN_Plug

./: CMakeLists.txt  LICENSE.txt  README.txt
Debug/: CMakeLists.txt
Release/: CMakeLists.txt
documentation/: Doxyfile.in
files/: cow_11k.off
plugins/: CMakeLists.txt
plugins/forms/: cameraPathDialog.ui  frameTimeDialog.ui  simpleVisu.ui
plugins/headers/: cameraPath.h  cameraPathDialog.h  spiral.h  tuto5Adds.h  tuto5Geom.h  tuto5Topo.h
plugins/resources/: cameraPath.qrc  importMap.qrc
plugins/source/: cameraPath.cpp  cameraPathDialog.cpp  importMap.cpp  spiral.cpp  tuto5Adds.cpp  tuto5Geom.cpp  tuto5Topo.cpp
