cmake_minimum_required(VERSION 2.8)



SET(PLUGIN_SRC_DIR ${PLUGIN_DIR}/source)
SET(PLUGIN_H_DIR ${PLUGIN_DIR}/headers)
SET(PLUGIN_FORMS_DIR ${PLUGIN_DIR}/forms)
SET(PLUGIN_RESOURCES_DIR ${PLUGIN_DIR}/resources )

INCLUDE_DIRECTORIES(
	${H_DIR}/plugins
	${PLUGIN_SRC_DIR}
	${PLUGIN_H_DIR}
	${PLUGIN_FORMS_DIR}
	${CMAKE_CURRENT_BINARY_DIR}
)

SET( SPIRAL_PLUGIN_SRC
	${SRC_DIR}/plugins/visualPlugin.cpp
	${PLUGIN_SRC_DIR}/spiral.cpp
)

SET( SPIRAL_PLUGIN_H
	${H_DIR}/plugins/visualPlugin.h
	${PLUGIN_H_DIR}/spiral.h
)

SET( TUTO5GEOM_PLUGIN_SRC
	${SRC_DIR}/plugins/visualPlugin.cpp
	${PLUGIN_SRC_DIR}/tuto5Geom.cpp
)

SET( TUTO5GEOM_PLUGIN_H
	${H_DIR}/plugins/visualPlugin.h
	${PLUGIN_H_DIR}/tuto5Geom.h
)

SET( TUTO5TOPO_PLUGIN_SRC
	${SRC_DIR}/plugins/visualPlugin.cpp
	${PLUGIN_SRC_DIR}/tuto5Topo.cpp
)

SET( TUTO5TOPO_PLUGIN_H
	${H_DIR}/plugins/visualPlugin.h
	${PLUGIN_H_DIR}/tuto5Topo.h
)

SET( TUTO5ADDS_PLUGIN_SRC
	${SRC_DIR}/plugins/visualPlugin.cpp
	${PLUGIN_SRC_DIR}/tuto5Adds.cpp
)

SET( TUTO5ADDS_PLUGIN_H
	${H_DIR}/plugins/visualPlugin.h
	${PLUGIN_H_DIR}/tuto5Adds.h
)

SET( IMPORTMAP_PLUGIN_SRC
	${SRC_DIR}/plugins/visualPlugin.cpp
	${PLUGIN_SRC_DIR}/importMap.cpp
)

SET( IMPORTMAP_PLUGIN_RESOURCES
	${PLUGIN_RESOURCES_DIR}/importMap.qrc
)

SET( IMPORTMAP_PLUGIN_H
	${H_DIR}/plugins/visualPlugin.h
	${PLUGIN_H_DIR}/importMap.h
)


SET( SIMPLEVISU_PLUGIN_SRC
	${SRC_DIR}/plugins/visualPlugin.cpp
	${PLUGIN_SRC_DIR}/simpleVisu.cpp
)

SET( SIMPLEVISU_PLUGIN_H
	${H_DIR}/plugins/visualPlugin.h
	${PLUGIN_H_DIR}/simpleVisu.h
)

SET( SIMPLEVISU_PLUGIN_FORMS
    ${PLUGIN_FORMS_DIR}/simpleVisu.ui
)

SET( CAMERAPATH_PLUGIN_SRC
	${SRC_DIR}/plugins/visualPlugin.cpp
    ${PLUGIN_SRC_DIR}/cameraPathDialog.cpp
    ${PLUGIN_SRC_DIR}/cameraPath.cpp
)

SET( CAMERAPATH_PLUGIN_H
    ${H_DIR}/plugins/visualPlugin.h
    ${PLUGIN_H_DIR}/cameraPathDialog.h
    ${PLUGIN_H_DIR}/cameraPath.h
)

SET( CAMERAPATH_PLUGIN_FORMS
    ${PLUGIN_FORMS_DIR}/frameTimeDialog.ui
    ${PLUGIN_FORMS_DIR}/cameraPathDialog.ui
)

SET( CAMERAPATH_PLUGIN_RESOURCES
    ${PLUGIN_RESOURCES_DIR}/cameraPath.qrc
)

SET( FIRSTPLUGIN_PLUGIN_SRC
	${SRC_DIR}/plugins/visualPlugin.cpp
    ${PLUGIN_SRC_DIR}/firstPlugin.cpp
)

SET( FIRSTPLUGIN_PLUGIN_H
    ${H_DIR}/plugins/visualPlugin.h
    ${PLUGIN_H_DIR}/firstPlugin.h
)


IF( ${CMAKE_BUILD_TYPE} STREQUAL Debug )

	IF(WIN32)
		link_directories( ${CGoGN_ROOT_DIR}/lib/Release )
	ELSE (WIN32)
		link_directories( ${CGoGN_ROOT_DIR}/lib/Debug ${CGoGN_ROOT_DIR}/lib/Release )
	ENDIF (WIN32)

	SET(LIBRARY_OUTPUT_PATH ${PLUGIN_COMPILE_DIR}D)

	QT4_WRAP_CPP(SPIRAL_MOC ${SPIRAL_PLUGIN_H})

	ADD_LIBRARY(SpiralD SHARED ${SPIRAL_PLUGIN_SRC} ${SPIRAL_MOC})

	TARGET_LINK_LIBRARIES(SpiralD
		${CGoGN_LIBS_D}
		${COMMON_LIBS}
		${QGLVIEWER_INCLUDE_LIBRARY}
	)
	
	ADD_DEPENDENCIES(SpiralD CGoGN_plugD)

	SET_TARGET_PROPERTIES(SpiralD PROPERTIES COMPILE_DEFINITIONS "DEBUG")



	QT4_WRAP_CPP(TUTO5GEOM_MOC ${TUTO5GEOM_PLUGIN_H})

	ADD_LIBRARY(Tuto5GeomD SHARED ${TUTO5GEOM_PLUGIN_SRC} ${TUTO5GEOM_MOC})

	TARGET_LINK_LIBRARIES(Tuto5GeomD
		${CGoGN_LIBS_D}
		${COMMON_LIBS}
		${QGLVIEWER_INCLUDE_LIBRARY}
	)

	ADD_DEPENDENCIES(Tuto5GeomD CGoGN_plugD)

	SET_TARGET_PROPERTIES(Tuto5GeomD PROPERTIES COMPILE_DEFINITIONS "DEBUG")



	QT4_WRAP_CPP(TUTO5TOPO_MOC ${TUTO5TOPO_PLUGIN_H})

	ADD_LIBRARY(Tuto5TopoD SHARED ${TUTO5TOPO_PLUGIN_SRC} ${TUTO5TOPO_MOC})

	TARGET_LINK_LIBRARIES(Tuto5TopoD
		${CGoGN_LIBS_D}
		${COMMON_LIBS}
		${QGLVIEWER_INCLUDE_LIBRARY}
	)

	ADD_DEPENDENCIES(Tuto5TopoD CGoGN_plugD)

	SET_TARGET_PROPERTIES(Tuto5TopoD PROPERTIES COMPILE_DEFINITIONS "DEBUG")


	ADD_DEPENDENCIES(Tuto5GeomD CGoGN_plugD)

	SET_TARGET_PROPERTIES(Tuto5GeomD PROPERTIES COMPILE_DEFINITIONS "DEBUG")



	QT4_WRAP_CPP(TUTO5ADDS_MOC ${TUTO5ADDS_PLUGIN_H})

	ADD_LIBRARY(Tuto5AddsD SHARED ${TUTO5ADDS_PLUGIN_SRC} ${TUTO5ADDS_MOC})

	TARGET_LINK_LIBRARIES(Tuto5AddsD
		${CGoGN_LIBS_D}
		${COMMON_LIBS}
		${QGLVIEWER_INCLUDE_LIBRARY}
	)

	ADD_DEPENDENCIES(Tuto5AddsD CGoGN_plugD)

	SET_TARGET_PROPERTIES(Tuto5AddsD PROPERTIES COMPILE_DEFINITIONS "DEBUG")



    
	QT4_WRAP_CPP(IMPORTMAP_MOC ${IMPORTMAP_PLUGIN_H})

	QT4_ADD_RESOURCES(IMPORTMAP_RCC ${IMPORTMAP_PLUGIN_RESOURCES})

	ADD_LIBRARY(ImportMapD SHARED ${IMPORTMAP_PLUGIN_SRC} ${IMPORTMAP_MOC} ${IMPORTMAP_RCC})

	TARGET_LINK_LIBRARIES(ImportMapD
		${CGoGN_LIBS_D}
		${COMMON_LIBS}
		${QGLVIEWER_INCLUDE_LIBRARY}
	)

	ADD_DEPENDENCIES(ImportMapD CGoGN_plugD)

	SET_TARGET_PROPERTIES(ImportMapD PROPERTIES COMPILE_DEFINITIONS "DEBUG")




	

	QT4_WRAP_UI(SIMPLEVISU_UI_H ${SIMPLEVISU_PLUGIN_FORMS})
    
	QT4_WRAP_CPP(SIMPLEVISU_MOC ${SIMPLEVISU_PLUGIN_H})

	ADD_LIBRARY(SimpleVisuD SHARED ${SIMPLEVISU_UI_H} ${SIMPLEVISU_PLUGIN_SRC} ${SIMPLEVISU_MOC})

	TARGET_LINK_LIBRARIES(SimpleVisuD
		${CGoGN_LIBS_D}
		${COMMON_LIBS}
		${QGLVIEWER_INCLUDE_LIBRARY}
	)

	ADD_DEPENDENCIES(SimpleVisuD CGoGN_plugD)

	SET_TARGET_PROPERTIES(SimpleVisuD PROPERTIES COMPILE_DEFINITIONS "DEBUG")
	
	
	
	
	
	QT4_WRAP_UI(CAMERAPATH_UI_H ${CAMERAPATH_PLUGIN_FORMS})
	
	QT4_WRAP_CPP(CAMERAPATH_MOC ${CAMERAPATH_PLUGIN_H})

	QT4_ADD_RESOURCES(CAMERAPATH_RCC ${CAMERAPATH_PLUGIN_RESOURCES})

	ADD_LIBRARY(CameraPathD SHARED ${CAMERAPATH_UI_H} ${CAMERAPATH_PLUGIN_SRC} ${CAMERAPATH_MOC} ${CAMERAPATH_RCC})

	TARGET_LINK_LIBRARIES(CameraPathD
		${CGoGN_LIBS_D}
		${COMMON_LIBS}
		${QGLVIEWER_INCLUDE_LIBRARY}
	)

	ADD_DEPENDENCIES(CameraPathD CGoGN_plugD)

	SET_TARGET_PROPERTIES(CameraPathD PROPERTIES COMPILE_DEFINITIONS "DEBUG")



	QT4_WRAP_CPP(FIRSTPLUGIN_MOC ${FIRSTPLUGIN_PLUGIN_H})

	ADD_LIBRARY(FirstPluginD SHARED ${FIRSTPLUGIN_PLUGIN_SRC} ${FIRSTPLUGIN_MOC})

	TARGET_LINK_LIBRARIES(FirstPluginD
		${CGoGN_LIBS_D}
		${COMMON_LIBS}
		${QGLVIEWER_INCLUDE_LIBRARY}
	)

	ADD_DEPENDENCIES(FirstPluginD CGoGN_plugD)

	SET_TARGET_PROPERTIES(FirstPluginD PROPERTIES COMPILE_DEFINITIONS "DEBUG")
		

ELSE ( ${CMAKE_BUILD_TYPE} STREQUAL Debug )
	
	IF(WIN32)
	link_directories( ${CGoGN_ROOT_DIR}/lib/Release )
	ELSE (WIN32)
		link_directories( ${CGoGN_ROOT_DIR}/lib/Release )
	ENDIF (WIN32)

	SET(LIBRARY_OUTPUT_PATH ${PLUGIN_COMPILE_DIR})

	QT4_WRAP_CPP(SPIRAL_MOC ${SPIRAL_PLUGIN_H})

	ADD_LIBRARY(Spiral SHARED ${SPIRAL_PLUGIN_SRC} ${SPIRAL_MOC})

	TARGET_LINK_LIBRARIES(Spiral
		${CGoGN_LIBS_R}
		${COMMON_LIBS}
		${QGLVIEWER_INCLUDE_LIBRARY}
	)

	ADD_DEPENDENCIES(Spiral CGoGN_plug)


	QT4_WRAP_CPP(TUTO5GEOM_MOC ${TUTO5GEOM_PLUGIN_H})

	ADD_LIBRARY(Tuto5Geom SHARED ${TUTO5GEOM_PLUGIN_SRC} ${TUTO5GEOM_MOC})

	TARGET_LINK_LIBRARIES(Tuto5Geom
	${CGoGN_LIBS_R}
		${COMMON_LIBS}
		${QGLVIEWER_INCLUDE_LIBRARY}
	)

	ADD_DEPENDENCIES(Tuto5Geom CGoGN_plug)
	


	QT4_WRAP_CPP(TUTO5TOPO_MOC ${TUTO5TOPO_PLUGIN_H})

	ADD_LIBRARY(Tuto5Topo SHARED ${TUTO5TOPO_PLUGIN_SRC} ${TUTO5TOPO_MOC})

	TARGET_LINK_LIBRARIES(Tuto5Topo
		${CGoGN_LIBS_R}
		${COMMON_LIBS}
		${QGLVIEWER_INCLUDE_LIBRARY}
	)

	ADD_DEPENDENCIES(Tuto5Topo CGoGN_plug)


	QT4_WRAP_CPP(TUTO5ADDS_MOC ${TUTO5ADDS_PLUGIN_H})

	ADD_LIBRARY(Tuto5Adds SHARED ${TUTO5ADDS_PLUGIN_SRC} ${TUTO5ADDS_MOC})

	TARGET_LINK_LIBRARIES(Tuto5Adds
		${CGoGN_LIBS_R}
		${COMMON_LIBS}
		${QGLVIEWER_INCLUDE_LIBRARY}
	)

	ADD_DEPENDENCIES(Tuto5Adds CGoGN_plug)



	QT4_WRAP_CPP(IMPORTMAP_MOC ${IMPORTMAP_PLUGIN_H})

	QT4_ADD_RESOURCES(IMPORTMAP_RCC ${IMPORTMAP_PLUGIN_RESOURCES})

	ADD_LIBRARY(ImportMap SHARED ${IMPORTMAP_PLUGIN_SRC} ${IMPORTMAP_MOC} ${IMPORTMAP_RCC})

	TARGET_LINK_LIBRARIES(ImportMap
		${CGoGN_LIBS_R}
		${COMMON_LIBS}
		${QGLVIEWER_INCLUDE_LIBRARY}
	)

	ADD_DEPENDENCIES(ImportMap CGoGN_plug)






    QT4_WRAP_UI(SIMPLEVISU_UI_H ${SIMPLEVISU_PLUGIN_FORMS})
    
	QT4_WRAP_CPP(SIMPLEVISU_MOC ${SIMPLEVISU_PLUGIN_H})

	ADD_LIBRARY(SimpleVisu SHARED ${SIMPLEVISU_UI_H} ${SIMPLEVISU_PLUGIN_SRC} ${SIMPLEVISU_MOC})

	TARGET_LINK_LIBRARIES(SimpleVisu
		${CGoGN_LIBS_R}
		${COMMON_LIBS}
		${QGLVIEWER_INCLUDE_LIBRARY}
	)

	ADD_DEPENDENCIES(SimpleVisu CGoGN_plug)
	
	
	
	
	QT4_WRAP_UI(CAMERAPATH_UI_H ${CAMERAPATH_PLUGIN_FORMS})
	
	QT4_WRAP_CPP(CAMERAPATH_MOC ${CAMERAPATH_PLUGIN_H})

    QT4_ADD_RESOURCES(CAMERAPATH_RCC ${CAMERAPATH_PLUGIN_RESOURCES})
    
    ADD_LIBRARY(CameraPath SHARED ${CAMERAPATH_UI_H} ${CAMERAPATH_PLUGIN_SRC} ${CAMERAPATH_MOC} ${CAMERAPATH_RCC})

	TARGET_LINK_LIBRARIES(CameraPath
		${CGoGN_LIBS_R}
		${COMMON_LIBS}
		${QGLVIEWER_INCLUDE_LIBRARY}
	)

	ADD_DEPENDENCIES(CameraPath CGoGN_plug)

	SET_TARGET_PROPERTIES(CameraPath PROPERTIES COMPILE_DEFINITIONS "DEBUG")



	QT4_WRAP_CPP(FIRSTPLUGIN_MOC ${FIRSTPLUGIN_PLUGIN_H})

	ADD_LIBRARY(FirstPlugin SHARED ${FIRSTPLUGIN_PLUGIN_SRC} ${FIRSTPLUGIN_MOC})

	TARGET_LINK_LIBRARIES(FirstPlugin
		${CGoGN_LIBS_R}
		${COMMON_LIBS}
		${QGLVIEWER_INCLUDE_LIBRARY}
	)

	ADD_DEPENDENCIES(FirstPlugin CGoGN_plug)

	SET_TARGET_PROPERTIES(FirstPlugin PROPERTIES COMPILE_DEFINITIONS "DEBUG")
	
ENDIF ( ${CMAKE_BUILD_TYPE} STREQUAL Debug )
